my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.4/errors/ETYPE_integer_t/T_ETYPE_integer_t-struct.h.tmp
/* Generated by dmlc, do not edit! */

#ifndef T_ETYPE_INTEGER_T_STRUCT_H
#define T_ETYPE_INTEGER_T_STRUCT_H

typedef struct test test_t;

conf_class_t *_initialize_T_ETYPE_integer_t(void);


#endif /* not T_ETYPE_INTEGER_T_STRUCT_H */
